@@ -1,5 +1,10 @@
 2012-01-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/parsing.lisp, src/interp/patches.lisp,
+	src/interp/preparse.lisp: Simplify preparse.
+
+2012-01-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/interp/setq.lisp: Use DEFPARAMETER for some
 	variables.
 
